<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lin_lyt_search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/et_bg_search_map"
        android:gravity="center"
        android:layoutDirection="rtl"
        android:padding="5dp"
        android:textDirection="rtl">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ic_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/content_description_icon_search_maps"
            app:srcCompat="@drawable/ic_search" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/et_search_address_hint_maps"
            android:inputType="text"
            android:textColor="@color/color_text_search_maps"
            android:textSize="@dimen/et_search_maps_size" />


    </LinearLayout>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/ic_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lin_lyt_confirm"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/content_description_icon_my_location"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_my_location" />

    <!--this linear layout is for background button along with ripple effect-->
    <LinearLayout
        android:id="@+id/lin_lyt_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_bg_login"
        android:clickable="true"
        android:focusable="true">

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_ripple_effect"
            android:text="@string/btn_maps_confirm"
            android:textColor="@color/color_btn_text_login"
            android:textSize="@dimen/btn_text_size" />

    </LinearLayout>

</RelativeLayout>