<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="16dp"
            android:orientation="vertical">

            <!--Replaced lin_lyt_add_photo -->
            <ImageView
                android:id="@+id/iv_prescription_drug"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="@string/content_description_icon_add_photo"
                android:visibility="gone"
                android:layout_marginBottom="16dp" />

            <LinearLayout
                android:id="@+id/lin_lyt_add_photo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/lin_lyt_bg_add_photo"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:layoutDirection="rtl"
                android:orientation="vertical"
                android:textDirection="rtl"
                android:visibility="visible">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/content_description_icon_add_photo"
                    app:srcCompat="@drawable/ic_add_a_photo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/tv_add_photo_send_medicine"
                    android:textSize="@dimen/tv_add_photo_send_medicine_size" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_lyt_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/lin_lyt_bg_item_send_medicine_activity"
                android:layoutDirection="rtl"
                android:orientation="horizontal"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:visibility="visible"
                android:padding="15dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/content_description_icon_add_location"
                    app:srcCompat="@drawable/ic_add_location" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:background="@color/color_accent" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/tv_add_location_send_medicine"
                    android:textDirection="rtl" />

            </LinearLayout>


            <!--this linear layout is for background button along with ripple effect-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg_login"
                android:clickable="true"
                android:focusable="true"
                android:visibility="visible"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_send_drug"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_ripple_effect"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="ارسال نسخه"
                    android:onClick="onClick"
                    android:textColor="@color/color_btn_text_login"
                    android:textSize="@dimen/btn_text_size"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>